# cc-slack-bolt

./: README.md  cookiecutter.json
{{cookiecutter.__repo_dir}}/: .env.sample  pyproject.toml
{{cookiecutter.__repo_dir}}/{{cookiecutter.__package_name}}/: main.py
{{cookiecutter.__repo_dir}}/{{cookiecutter.__package_name}}/common/: helpers.py
{{cookiecutter.__repo_dir}}/{{cookiecutter.__package_name}}/listeners/: __init__.py
{{cookiecutter.__repo_dir}}/{{cookiecutter.__package_name}}/listeners/messages/: __init__.py  hi_titus.py
